--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "express-project",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "express-project/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
   "author": "Emad",
